# MoviesRecommender

./: .replit  app.py  data_processor.py  meta_model.pkl  movies.csv  posters.csv  pyproject.toml  recommendation_engine.py
attached_assets/: movie_recommder.py
